# Locusta

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Mainpage.dox  README  README.md  _c_make_c_u_d_a_compiler_id_8cu.html  _c_make_c_u_d_a_compiler_id_8cu_source.html  _c_make_c_u_d_a_compiler_id_8cudafe1_8cpp.html  _c_make_c_u_d_a_compiler_id_8cudafe1_8cpp.js  _c_make_c_u_d_a_compiler_id_8cudafe1_8cpp__incl.map  _c_make_c_u_d_a_compiler_id_8cudafe1_8cpp__incl.md5  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _mainpage_8dox.html  annotated.html  annotated_dup.js  benchmarks__cpu_8hpp.html  benchmarks__cpu_8hpp.js  benchmarks__cpu_8hpp__dep__incl.map  benchmarks__cpu_8hpp__dep__incl.md5  benchmarks__cpu_8hpp__incl.map  benchmarks__cpu_8hpp__incl.md5  benchmarks__cpu_8hpp_source.html  benchmarks__cpu__impl_8hpp.html  benchmarks__cpu__impl_8hpp.js  benchmarks__cpu__impl_8hpp__dep__incl.map  benchmarks__cpu__impl_8hpp__dep__incl.md5  benchmarks__cpu__impl_8hpp_source.html  benchmarks__cuda_8cu.html  benchmarks__cuda_8cu_source.html  benchmarks__cuda_8hpp.html  benchmarks__cuda_8hpp.js  benchmarks__cuda_8hpp__dep__incl.map  benchmarks__cuda_8hpp__dep__incl.md5  benchmarks__cuda_8hpp__incl.map  benchmarks__cuda_8hpp__incl.md5  benchmarks__cuda_8hpp_source.html  class_c_p_u_differential_evolution_test-members.html  (+1213 more)
apps/: CMakeLists.txt
apps/tests/: ga_cpu_test.cpp  ga_gpu_test.cpp
benchmarks/: CMakeLists.txt  benchmarks_cpu.cpp  benchmarks_cpu.h  benchmarks_gpu.h
benchmarks/kernel/: benchmarks_gpu.cu
examples/: CMakeLists.txt  locustaExamples.cpp
examples/benchmarks/: benchmarks_cpu.hpp  benchmarks_cpu_impl.hpp  benchmarks_cuda.hpp
examples/benchmarks/kernel/: benchmarks_cuda.cu
include/: evaluator.h  evolutionary_solver.h  population.h  prngenerator.h
include/cuda_common/: cuPrintf.cu  cuda_helpers.h  curand_helper.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_2.js  defines_3.js  defines_5.js  defines_8.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  (+60 more)
src/: CMakeLists.txt
src/evaluator/: bound_mapping_cpu.h  bound_mapping_cpu.hpp  bound_mapping_gpu.h  bound_mapping_gpu.hpp  evaluable_function.hpp  evaluable_function_cuda.hpp  evaluator.cpp  evaluator.h  evaluator.hpp  evaluator_cpu.cpp  evaluator_cpu.h  evaluator_cpu.hpp  evaluator_cpu_impl.hpp  evaluator_cuda.cpp  evaluator_cuda.hpp  evaluator_cuda_impl.hpp  evaluator_gpu.h  evaluator_gpu.hpp  evaluator_gpu_impl.h  evaluator_gpu_impl.hpp
src/population/: population_set.cpp  population_set.h  population_set.hpp  population_set_cpu.cpp  population_set_cpu.h  population_set_cpu.hpp  population_set_cuda.cpp  population_set_cuda.hpp  population_set_cuda_impl.hpp  population_set_gpu.h  population_set_gpu.hpp  population_set_gpu_impl.h  population_set_gpu_impl.hpp  population_set_impl.hpp
src/population/kernel/: population_set_cuda.cu  population_set_gpu.cu
src/prngenerator/: prngenerator.h  prngenerator.hpp  prngenerator_cpu.cpp  prngenerator_cpu.h  prngenerator_cpu.hpp  prngenerator_cpu_impl.hpp  prngenerator_cuda.hpp  prngenerator_cuda_impl.hpp  prngenerator_gpu.h  prngenerator_gpu.hpp  prngenerator_gpu_impl.h  prngenerator_gpu_impl.hpp
src/prngenerator/kernel/: prngenerator_cuda.cu  prngenerator_gpu.cu
src/solvers/: evolutionary_solver.cpp  evolutionary_solver.h  evolutionary_solver.hpp  evolutionary_solver_cpu.hpp  evolutionary_solver_cpu_impl.hpp  evolutionary_solver_cuda.cpp  evolutionary_solver_cuda.hpp  evolutionary_solver_cuda_impl.hpp  evolutionary_solver_impl.hpp
src/solvers/de/: de_solver_cpu.hpp  de_solver_cpu_impl.hpp  de_solver_cuda.hpp  de_solver_cuda_impl.hpp
src/solvers/de/de_operators/: de_operators.hpp  de_operators_cuda.hpp  de_std_operators_cpu_impl.hpp  de_std_operators_cuda_impl.hpp
src/solvers/de/de_operators/kernel/: de_std_operators_cuda.cu
src/solvers/de/kernel/: de_solver_cuda.cu
src/solvers/ga/: ga_operators.h  ga_operators.hpp  ga_operators_cpu.cpp  ga_operators_cpu.h  ga_operators_cpu.hpp  ga_operators_gpu.h  ga_operators_gpu.hpp  ga_operators_gpu_impl.h  ga_operators_gpu_impl.hpp  ga_solver.h  ga_solver.hpp  ga_solver_cpu.cpp  ga_solver_cpu.h  ga_solver_cpu.hpp  ga_solver_cpu_impl.hpp  ga_solver_cuda.hpp  ga_solver_cuda_impl.hpp  ga_solver_gpu.h  ga_solver_gpu.hpp  ga_solver_gpu_impl.h  ga_solver_gpu_impl.hpp
src/solvers/ga/ga_operators/: ga_operators.hpp  ga_operators_cuda.hpp  ga_std_operators_cpu_impl.hpp  ga_std_operators_cuda_impl.hpp
src/solvers/ga/ga_operators/kernel/: ga_std_operators_cuda.cu  ga_std_operators_cuda.cu~
src/solvers/ga/kernel/: ga_operators_gpu.cu  ga_solver_cuda.cu  ga_solver_cuda.cu~
src/solvers/kernel/: evolutionary_solver_cuda.cu
src/solvers/pso/: pso_solver.cpp  pso_solver.hpp  pso_solver_cpu.hpp  pso_solver_cpu_impl.hpp  pso_solver_cuda.cpp  pso_solver_cuda.hpp  pso_solver_cuda_impl.hpp  pso_solver_gpu.hpp
src/solvers/pso/kernel/: pso_solver_cuda.cu
src/solvers/pso/pso_operators/: pso_operators.hpp  pso_operators_cuda.hpp  pso_std_operators.hpp  pso_std_operators_cpu_impl.hpp  pso_std_operators_cuda.hpp  pso_std_operators_cuda_impl.hpp
src/solvers/pso/pso_operators/kernel/: pso_std_operators_cuda.cu
tests/: CMakeLists.txt  ga_cpu_test.cpp  ga_gpu_test.cpp  locustaUnitTests.cpp
tests/benchmarks/: benchmarks_cpu.cpp  benchmarks_cpu.h  benchmarks_cpu.hpp  benchmarks_cpu_impl.hpp  benchmarks_cuda.hpp  benchmarks_gpu.h  benchmarks_gpu.hpp
tests/benchmarks/kernel/: benchmarks_cuda.cu  benchmarks_gpu.cu
